--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "nodemon": "^1.19.2"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "eslint": "^6.4.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2"
+    "eslint-plugin-import": "^2.18.2",
+    "nodemon": "^1.19.2"
   },
   "engines": {
     "node": "10.15.3"
